test/org/midica/testfiles/failing/instruments-with-big-lsb.midica
INSTRUMENTS
	1	0 test
	2	0,0 test
	10	0,0/128 test
END

1 c /4
